# Cotton

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.sh
cotton-vscode/: CHANGELOG.md  README.md  cotton-lang-0.1.0.vsix  language-configuration.json  package.json
cotton-vscode/snippets/: cotton.json
cotton-vscode/syntaxes/: cotton.tmLanguage.json
docs/: design.md
examples/: closest_pair.cot  comprehension.cot  error_handling.cot  match.cot  ownership.cot
src/: ast.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  lexer.rs  main.cpp  main.rs  parser.cpp  parser.h  token.h  token.rs  value.cpp  value.h
